working on path and handler of button

--- a/views.html
+++ b/views.html
@@ -41,6 +41,11 @@
         </div>
 
     </div>
+
+    <div class="switchView">
+        <label class="button-label">Switch view</label>
+        <input id="toggle-event" type="checkbox" data-togle="toggle">
+    </div>
 </body>
 
 </html>
