--- a/views.html
+++ b/views.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.js"></script>
     <script src="js/map.js" async></script>
     <script src="js/load.js" async></script>
+	<script src="js/route.js" async></script>
 
     <style>
         h1 {text-align: center;}
