--- a/views.html
+++ b/views.html
@@ -81,6 +81,7 @@
 						<option value="beer">Beer Gardens</option>
 						<option value="rest">Restrooms</option>
 						<option value="food">Food</option>
+						<option value="gate">Gate</option>
 					</select>
 				</span>
 			</div>
