added some other routes

--- a/views.html
+++ b/views.html
@@ -107,6 +107,14 @@
     </div> -->
 
     <div id="route-view" style="display:none">
+		<span style="top: 40px">
+					<label>Route Choice</label>
+					<select id="route-choice">
+						<option value="Route_1">Route 1</option>
+						<option value="Route_2">Route 2</option>
+						<option value="Route_3">Route 3</option>
+					</select>
+		</span>
 		<div class="lineWrapper">
             <div class="map-view"><img id="route-map-img" src="data/Park_Map.jpg" width="1000px"></img><svg id="route-map-plots"></svg></div>
             <div id="pie-view">
