--- a/views.html
+++ b/views.html
@@ -106,8 +106,7 @@
 		<div class="lineWrapper">
             <div class="map-view"><img id="route-map-img" src="data/Park_Map.jpg" width="1000px"></img><svg id="#route-map-plots"></svg></div>
             <div id="pie-view">
-				<svg>
-				</svg>
+				<svg id="#pie-chart-plots"></svg>
 			</div>
         </div>
     </div>
