--- a/views.html
+++ b/views.html
@@ -118,7 +118,8 @@
 		<div class="lineWrapper">
             <div class="map-view"><img id="route-map-img" src="data/Park_Map.jpg" width="1000px"></img><svg id="route-map-plots"></svg></div>
             <div id="pie-view">
-				<svg id="#pie-chart-plots"></svg>
+				<svg>
+				</svg>
 			</div>
         </div>
     </div>
