added text to the pie chart

--- a/views.html
+++ b/views.html
@@ -120,6 +120,8 @@
             <div id="pie-view">
 				<svg>
 				</svg>
+				<div id="pie-text">
+				</div>
 			</div>
         </div>
     </div>
